Changed architecture to 'all'

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.9.1
 Homepage: http://www.openpanel.com/openapp/
 
 Package: openapp-symfony
-Architecture: any
+Architecture: all
 Pre-Depends: openapp-backup, openapp-tuning
 Depends: openpanel-openapp-mod-user, openpanel-openapp-mod-smtp, openpanel-openapp-mod-backup, php5-cli, openapp-phpmyadmin-installer, openapp-symfony-installer
 Provides: openapp-app
@@ -15,7 +15,7 @@ Conflicts: openapp-app
 Description: This will install your Symfony OpenApp Appliance
 
 Package: openapp-symfony-installer
-Architecture: any
+Architecture: all
 Pre-Depends: mysql-server
 Depends: apache2, libapache2-mod-php5, php5-sqlite, php5-intl, php-apc
 Provides: openapp-app-installer
