Copy/pasted too much

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,6 @@ Package: openapp-symfony-installer
 Architecture: any
 Pre-Depends: mysql-server
 Depends: apache2, libapache2-mod-php5, php5-sqlite, php5-intl, php-apc
-Provides: openapp-app
-Conflicts: openapp-app
+Provides: openapp-app-installer
+Conflicts: openapp-app-installer
 Description: This will install your Symfony OpenApp Appliance
