--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Homepage: http://www.openpanel.com/openapp/
 Package: openapp-symfony
 Architecture: all
 Pre-Depends: openapp-backup, openapp-tuning
-Depends: openpanel-openapp-mod-user, openpanel-openapp-mod-smtp, openpanel-openapp-mod-backup, php5-cli, openapp-phpmyadmin-installer, openapp-symfony-installer
+Suggests: openapp-xtrabackup
+Depends: openpanel-openapp-mod-user, openpanel-openapp-mod-symfony, openpanel-openapp-mod-smtp, openpanel-openapp-mod-backup, php5-cli, openapp-phpmyadmin-installer, openapp-symfony-installer
 Provides: openapp-app
 Conflicts: openapp-app
 Description: This will install your Symfony OpenApp Appliance
