--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Package: openapp-symfony
 Architecture: all
 Pre-Depends: openapp-backup, openapp-tuning
 Suggests: openapp-xtrabackup
-Depends: openpanel-openapp-mod-user, openpanel-openapp-mod-mysql, openpanel-openapp-mod-smtp, openpanel-openapp-mod-backup, php5-cli, openapp-phpmyadmin-installer, openapp-symfony-installer
+Depends: openpanel-openapp-mod-user, openpanel-openapp-mod-symfony, openpanel-openapp-mod-mysql, openpanel-openapp-mod-smtp, openpanel-openapp-mod-backup, php5-cli, openapp-phpmyadmin-installer, openapp-symfony-installer
 Provides: openapp-app
 Conflicts: openapp-app
 Description: This will install your Symfony OpenApp Appliance
@@ -22,3 +22,10 @@ Depends: apache2, libapache2-mod-php5, php5-sqlite, php5-intl, php-apc, git-core
 Provides: openapp-app-installer
 Conflicts: openapp-app-installer
 Description: This will install your Symfony OpenApp Appliance
+
+Package: openpanel-openapp-mod-symfony
+Architecture: all
+Pre-Depends: openpanel-core, openpanel-authd
+Depends: openapp-symfony, openpanel-openapp-mod-user, openpanel-core, openpanel-api-sh, openpanel-openapp-call, ${shlibs:Depends}, ${misc:Depends}, openpanel-validatepem, openapp-awstats
+Description: OpenPanel module to manage OpenApp Symfony
+ Manage the OpenApp Symfony
